2008-06-18  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerable.cs: Rename Join() to Implode(), as .NET already provides a
	  Join() function with completely different semantics (SQL JOIN, i.e. list
	  intersection), so this should remove ambiguity/confusion.

2008-06-17  Jonathan Pryor  <jpryor@novell.com>

	* Check.cs: Add Check.Source().
	* IEnumerable.cs: Add error checking to .Sort() methods.  Add
	  .SelectFromEach() overloads to accept up to 4 lists (i.e. Haskell zip, 
	  zip3, and zip4 are now supported).  Change semantics of .SelectFromEach()
	  to accept empty lists (previously this would throw an
	  InvalidOperationException, but Haskell permits empty lists so why not?).

2008-06-17  Jonathan Pryor  <jpryor@novell.com>

	* Check.cs: Add Check.SourceAndFunc().
	* Int32.cs: Obsolete Times(int,Action<int>), UpTo(int,int,Action<int>),
	  DownTo(int,int,Action<int>), Step(int,int,int,Action<int>), and replace
	  with overloads that don't take an Action<int> parameter but instead return
	  an IEnumerable<int> which can be used with
	  Apply<T>(IEnumerable<T>,Action<T>).
	* String.cs: Add `IEnumerable<string> Lines (string self)` and overloads.
	  Obsolete EachLine().
	* IEnumerable.cs: 
	  - Fix Repeat() so that it does the null check before .MoveNext() is 
	    called on the iterator.
	  - Add Apply(IEnumerable,Action) and Apply() methods to allow inserting
	    "side-effect" methods into an extension method "chain", e.g.
	      1.UpTo(5)
	        .Apply (Console.WriteLine)  // original
	        .Select (n => 2*n)          // multiply by 2
	        .Apply (Connsole.WriteLine) // final
	        .Apply ();                  // do it now, not later.
	  - It was pointed out that, to sort an IEnumerable<int> with 20million 
	    elements, adding them to a List<int> + sorting was faster than using
	    .OrderBy(n=>n) (~2s vs. 9s), so provide a Sort extension method for
	    simple sorting needs.